--- a/proposta/pom.xml
+++ b/proposta/pom.xml
@@ -58,8 +58,11 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>3.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
-		
 
 	</dependencies>
 
