--- a/proposta/src/main/resources/application.properties
+++ b/proposta/src/main/resources/application.properties
@@ -1,4 +1,18 @@
+#Mariadb
+spring.datasource.url=jdbc:mariadb://localhost:3306/mysql-mariadb?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+
 # actuator
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 info.build.artifact=@project.artifactId@
+
+#Variavel do feing
+endereco.restricao=localhost
+endereco.cartao=localhost
