--- a/proposta/src/main/resources/application.properties
+++ b/proposta/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
-
+server.port=8081
 
 # actuator
 management.endpoint.health.show-details=always
@@ -16,3 +16,11 @@ info.build.artifact=@project.artifactId@
 #Variavel do feing
 endereco.restricao=localhost
 endereco.cartao=localhost
+
+
+keycloak.auth-server-url:http://localhost:18080/auth
+keycloak.realm:Reino-de-proposta
+keycloak.resource:proposta
+keycloak.public-client:true
+keycloak.bearer-only:true
+keycloak.cors=true
