--- a/proposta/docker-compose.yaml
+++ b/proposta/docker-compose.yaml
@@ -59,6 +59,7 @@ services:
       - analise
       - transacoes
       - postgres
+      - db
     environment:
       DB_VENDOR: postgres
       DB_ADDR: postgres
@@ -168,7 +169,7 @@ services:
     build:  ./
     restart: on-failure
     ports:
-      - '8080:8080'
+      - '8081:8081'
     networks:
       - rede-spring
     depends_on:
@@ -182,6 +183,7 @@ services:
       - analise
       - transacoes
       - postgres
+      - keycloak
 
     environment:
       SPRING_DATASOURCE_URL: jdbc:mariadb://db:3306/mysql-mariadb?createDatabaseIfNotExist=true
@@ -189,7 +191,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: root
       ENDERECO_RESTRICAO: analise
       ENDERECO_CARTAO: contas
-
+      KEYCLOAK_AUTH_SERVER_URL: http://keycloak:18080/auth
 
 volumes:
   grafana-volume:
