login via senha cartao

--- a/proposta/src/main/resources/application.properties
+++ b/proposta/src/main/resources/application.properties
@@ -19,8 +19,9 @@ endereco.cartao=localhost
 
 
 keycloak.auth-server-url:http://localhost:18080/auth
-keycloak.realm:Reino-de-proposta
+keycloak.realm:reino-de-proposta
 keycloak.resource:proposta
 keycloak.public-client:true
 keycloak.bearer-only:true
-keycloak.cors=true
+
+logging.level.org.springframework.security=DEBUG
