--- a/proposta/docker-compose.yaml
+++ b/proposta/docker-compose.yaml
@@ -42,6 +42,7 @@ services:
 
   keycloak:
     image: jboss/keycloak
+    container_name: keycloak
     networks:
       - rede-spring
     ports:
@@ -70,6 +71,7 @@ services:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: Pa55w0rd
       POSTGRES_PORT_5432_TCP_ADDR: 127.0.0.1
+      KEYCLOAK_FRONTEND_URL: http://keycloak:8080/auth
 
   analise:
     image: 'zupacademy/analise-financeira'
@@ -166,6 +168,7 @@ services:
       - '3306:3306'
 
   proposta:
+    container_name: proposta
     build:  ./
     restart: on-failure
     ports:
@@ -191,8 +194,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: root
       ENDERECO_RESTRICAO: analise
       ENDERECO_CARTAO: contas
-      KEYCLOAK_AUTH_SERVER_URL: http://keycloak:18080/auth
-
+      KEYCLOAK_AUTH_SERVER_URL: http://keycloak:8080/auth
 volumes:
   grafana-volume:
   prometheus-volume:
@@ -200,3 +202,4 @@ volumes:
 
 networks:
   rede-spring:
+    driver: "bridge"
