--- a/proposta/src/main/resources/application.properties
+++ b/proposta/src/main/resources/application.properties
@@ -25,3 +25,7 @@ keycloak.public-client:true
 keycloak.bearer-only:true
 
 logging.level.org.springframework.security=DEBUG
+
+
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.prometheus.enabled=true
