--- a/proposta/src/main/resources/application.properties
+++ b/proposta/src/main/resources/application.properties
@@ -29,3 +29,17 @@ logging.level.org.springframework.security=DEBUG
 
 management.endpoints.web.exposure.include=info,health,prometheus
 management.endpoints.prometheus.enabled=true
+
+# Jaeger - Habilita ou não
+opentracing.jaeger.enabled=true
+
+# Jaeger - Nome do serviço
+opentracing.jaeger.service-name=proposta
+
+# Jaeger - Endereço para enviar os metadados (trace, span, etc)
+opentracing.jaeger.http-sender.url=http://localhost:14268/api/traces
+
+# Jaeger - Tipo de amostragem (probabilístico) e sua configuração (1 = 100%)
+opentracing.jaeger.probabilistic-sampler.sampling-rate=1
+opentracing.spring.cloud.feign.enabled=false
+spring.cloud.loadbalancer.ribbon.enabled=false
