--- a/proposta/pom.xml
+++ b/proposta/pom.xml
@@ -92,6 +92,14 @@
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-spring-boot-starter</artifactId>
 		</dependency>
+
+
+		<dependency>
+			<groupId>io.opentracing.contrib</groupId>
+			<artifactId>opentracing-spring-jaeger-cloud-starter</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
