--- a/proposta/src/main/resources/application.properties
+++ b/proposta/src/main/resources/application.properties
@@ -26,9 +26,11 @@ keycloak.bearer-only:true
 
 logging.level.org.springframework.security=DEBUG
 
-
-management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=info,health,prometheus
 management.endpoints.prometheus.enabled=true
+
+endpoints.metrics.sensitive=false
 
 # Jaeger - Habilita ou não
 opentracing.jaeger.enabled=true
