salvando documento de modo seguro

--- a/proposta/src/main/resources/application.properties
+++ b/proposta/src/main/resources/application.properties
@@ -45,3 +45,5 @@ opentracing.jaeger.http-sender.url=http://localhost:14268/api/traces
 opentracing.jaeger.probabilistic-sampler.sampling-rate=1
 opentracing.spring.cloud.feign.enabled=false
 spring.cloud.loadbalancer.ribbon.enabled=false
+
+documento.secret=869ec1174e07b84f
