Atualizacao com jaeger funcionando no prometheus

--- a/proposta/src/main/resources/application.properties
+++ b/proposta/src/main/resources/application.properties
@@ -43,7 +43,7 @@ opentracing.jaeger.http-sender.url=http://localhost:14268/api/traces
 
 # Jaeger - Tipo de amostragem (probabilístico) e sua configuração (1 = 100%)
 opentracing.jaeger.probabilistic-sampler.sampling-rate=1
-opentracing.spring.cloud.feign.enabled=false
-spring.cloud.loadbalancer.ribbon.enabled=false
+#opentracing.spring.cloud.feign.enabled=false
+#spring.cloud.loadbalancer.ribbon.enabled=false
 
 documento.secret=869ec1174e07b84f
