--- a/proposta/pom.xml
+++ b/proposta/pom.xml
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2020.0.1</spring-cloud.version>
-
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 
 
@@ -104,6 +104,12 @@
 			<groupId>io.opentracing.contrib</groupId>
 			<artifactId>opentracing-spring-jaeger-cloud-starter</artifactId>
 			<version>3.2.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-openfeign-core</artifactId>
+			<version>2.2.8.RELEASE</version>
 		</dependency>
 
 	</dependencies>
